--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,9 +36,7 @@ body {
 }
 
 body, input, textarea, button, span {
-    font-family: 'inter', sans-serif;
-    font-weight: 400;
-    font-size: 1rem;
+    font: 400 1rem 'inter', sans-serif;
 }
 
 button {
@@ -48,42 +46,4 @@ button {
 a {
     color: inherit;
     text-decoration: none;
-}
-
-.container {
-    height: 100vh;
-    max-width: 992px;
-    margin: 0 auto;
-    padding: 2.5rem 2rem;
-    display: flex;
-    flex-direction: column;
-}
-
-.experience-bar {
-    display: flex;
-    align-items: center;
-}
-
-.experience-bar span {
-    font-size: 1rem;
-}
-
-.experience-bar > div {
-    flex: 1;
-    height: 4px;
-    border-radius: 4px;
-    background: var(--gray-line);
-    margin: 0 1.5rem;
-    position: relative;
-}
-
-.experience-bar > div > div {
-    height: 4px;
-    border-radius: 4px;
-    background: var(--green);
-}
-
-.experience-bar .current-experience {
-    position: absolute;
-    transform: translateX(-50%);
 }
